--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -1,1 +1,101 @@
 @import (css) "reset.css";
+@import (css) "screen.css";
+
+@bg-color: #00adef;
+@text-color: #fff;
+@bg-image: ;
+
+html {
+	background-color: @bg-color;
+	color: @text-color;
+}
+
+#cvopts{
+  height: 100%;
+  overflow: hidden;
+  text-align: center;
+  display: inline;
+  margin-left: 20px;
+  line-height: 1.5em;
+}
+#cvopts li{
+  display: inline;
+}
+
+#cvopts li:after{
+  content:"·";
+}
+
+#cvopts li:last-child:after{
+  content:"";
+}
+
+#navigation span{
+  display: block;
+  float: left;
+  margin-right: 5px;
+  font-size: 1.5em;
+  line-height: 1em;
+}
+
+#main{
+ font-family:'helvetica neue',helvetica, arial;
+ font-weight:100;
+}
+
+#projectslist{
+  font-size: .7em;
+  margin-left: 1em;
+}
+
+p#tagline { font-family: inherit; }
+
+hr{
+	width: 100%;
+	border: none;
+	border-bottom: 1px solid white;
+	margin-top: -4em;
+	float: left;
+	height: 2px;
+}
+
+li#mail{
+	margin-top: .8em;
+	position: relative;
+	height: 1.5em;
+
+  a {
+    &:first-child {
+    	position: absolute;
+    }
+
+    &:last-child{
+    	display: block;
+    	position: absolute;
+    	left: 50px;
+    	top: -10px;
+    }
+
+    img {
+      filter: invert(1);
+    }
+  }
+}
+
+#whereabouts-list{
+	margin-top: 15px;
+
+  li {
+  	display: block;
+  	float: left;
+  	margin-right: 1em;
+  	height: 27px;
+
+    a {
+      &, &:hover, &:visited {
+        color: white;
+      }
+    }
+
+  }
+}
