--- a/views/layout.slim
+++ b/views/layout.slim
@@ -4,7 +4,8 @@ html
     title
       | Progress
     meta http-equiv="content-type" content="text/html; charset=UTF8"
-    link rel="shortcut icon" href=""
+    link rel="shortcut icon" href="/favicon.ico"
+    link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
         /! inject:vendor:css
         /! endinject
         /! inject:css
