--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -1,101 +1,172 @@
 @import (css) "reset.css";
-@import (css) "screen.css";
 
-@bg-color: #00adef;
-@text-color: #fff;
-@bg-image: ;
+@header-color: #00adef;
+@projects-color: #f8f8f8;
+@bottom-color: @projects-color;
 
-html {
-	background-color: @bg-color;
-	color: @text-color;
+html, body {
+  width: 100%;
+  background: linear-gradient(to top, @header-color 50%, @bottom-color 50%);
 }
 
-#cvopts{
-  height: 100%;
-  overflow: hidden;
-  text-align: center;
-  display: inline;
-  margin-left: 20px;
-  line-height: 1.5em;
-}
-#cvopts li{
-  display: inline;
+body {
+  font-family:'lato','helvetica neue',helvetica,sans-serif;
+  font-weight:300;
+  font-size: 16pt;
 }
 
-#cvopts li:after{
-  content:"·";
+h1 {
+	font-weight: 300;
+	font-size: 66pt;
 }
 
-#cvopts li:last-child:after{
-  content:"";
+h2{
+	font-weight: 300;
+	font-size: 16pt
 }
 
-#navigation span{
-  display: block;
-  float: left;
-  margin-right: 5px;
-  font-size: 1.5em;
-  line-height: 1em;
+a {
+  text-decoration: none;
+  color: inherit;
+  outline: none;
 }
 
-#main{
- font-family:'helvetica neue',helvetica, arial;
- font-weight:100;
+.underlined {
+  background: linear-gradient(#fffff8, #fffff8), linear-gradient(#fffff8, #fffff8), linear-gradient(#555, #555);
+  background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
+  background-repeat: no-repeat, no-repeat, repeat-x;
+  text-shadow: 0.03em 0 #fffff8, -0.03em 0 #fffff8, 0 0.03em #fffff8, 0 -0.03em #fffff8, 0.06em 0 #fffff8, -0.06em 0 #fffff8, 0.09em 0 #fffff8, -0.09em 0 #fffff8, 0.12em 0 #fffff8, -0.12em 0 #fffff8, 0.15em 0 #fffff8, -0.15em 0 #fffff8;
+  background-position: 0% 93%, 100% 93%, 0% 93%;
 }
 
-#projectslist{
-  font-size: .7em;
-  margin-left: 1em;
-}
+header {
+  padding-left: 3em;
+  padding-top: 50px;
+  background-color: @header-color;
+  color: #fff;
 
-p#tagline { font-family: inherit; }
-
-hr{
-	width: 100%;
-	border: none;
-	border-bottom: 1px solid white;
-	margin-top: -4em;
-	float: left;
-	height: 2px;
-}
-
-li#mail{
-	margin-top: .8em;
-	position: relative;
-	height: 1.5em;
-
-  a {
-    &:first-child {
-    	position: absolute;
-    }
-
-    &:last-child{
-    	display: block;
-    	position: absolute;
-    	left: 50px;
-    	top: -10px;
-    }
-
-    img {
-      filter: invert(1);
-    }
-  }
-}
-
-#whereabouts-list{
-	margin-top: 15px;
-
-  li {
+  p#tagline {
+    font-style: italic;
+  	text-align: justify;
   	display: block;
-  	float: left;
-  	margin-right: 1em;
-  	height: 27px;
+  	width: 25em;
+  	margin-top: 10px;
+  }
 
-    a {
-      &, &:hover, &:visited {
-        color: white;
+  .vcard{
+  	width: 34px;
+  	height: 26px;
+
+  	background-position: 0px 0px;
+  }
+
+  ul#navigation {
+  	margin-top: 30px;
+  	font-size: 26pt;
+
+    li#mail {
+    	margin-top: .8em;
+    	position: relative;
+    	height: 1.5em;
+
+      a {
+        &:first-child {
+        	position: absolute;
+        }
+
+        &:last-child {
+        	display: block;
+        	position: absolute;
+        	left: 50px;
+        	top: -5px;
+        }
+
+        img {
+          filter: invert(1);
+        }
       }
     }
 
   }
+
+  #whereabouts {
+  	height: 4em;
+  }
+
+  #whereabouts-list {
+  	margin-top: 15px;
+
+    li {
+    	display: block;
+    	float: left;
+    	margin-right: 1em;
+    	height: 27px;
+
+      a {
+        &, &:hover, &:visited {
+          color: white;
+        }
+      }
+
+    }
+  }
+
+}
+
+hr {
+	width: 100%;
+	border: none;
+	border-bottom: 1px solid #fff;
+	margin-top: -3em;
+	float: left;
+	height: 2px;
+}
+
+section#projects {
+  padding-left: 3em;
+  box-shadow: inset 0 1px 0 0 rgba(0,0,0,.05),inset 0 2px 3px 0 rgba(0,0,0,.1);
+  min-height: 100px;
+  width: 100%;
+  background-color: @projects-color;
+  padding-top: 20px;
+  color: #555;
+  padding-bottom: 10px;
+
+  h2 {
+    font-size: 24pt;
+  }
+
+  ul {
+    margin-left: 1em;
+    margin-top: 1em;
+    li {
+      font-size: 12pt;
+      display: block;
+      width: 400px;
+      background-color: white;
+      border-radius: 10px;
+      overflow: auto;
+      box-shadow: 0 1px 0 0 rgba(0,0,0,.05), 0 2px 3px 0 rgba(0,0,0,.1);
+
+      .thumbnail {
+        width: 100px;
+        height: 100px;
+        overflow: hidden;
+        float: left;
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
+        margin-right: 12px;
+      }
+
+      h3 {
+        font-weight: 400;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        span {
+          .underlined();
+        }
+      }
+    }
+  }
+
 }
