--- a/views/_index.slim
+++ b/views/_index.slim
@@ -1,25 +1,11 @@
-#main
+header
   h1 Piotr Sokólski
   p#tagline  Hi, my name is Piotr Sokólski and I'm a programmer living in Warsaw, Poland. 
   ul#navigation
-    li style=("clear:both; overflow:hidden") 
-      span cv
-      ul#cvopts
-        li
-          a href="http://url.pyetras.com/cvPiotrSokolski_pl.pdf"  pl
-        li
-          a href="http://dl.dropbox.com/u/176641/cvpiotrsokolski_en.pdf"  en
-    /! <li><a href="http://codepit.pyetras.com/">blog</a></li
-    li
-      | projects:
-      ul#projectslist
-        li
-          a href="http://shrlss.com"  shareless
-          | (node.js)
     li#mail
-      a href="/PiotrSokolski.vcf" 
+      a href="/PiotrSokolski.vcf" title="vCard"
         img src="/images/vcard-alt.svg"
-      a href="mailto:p@pyetras.com"  p@pyetras.com
+      a href="mailto:p@pyetras.com" p@pyetras.com
   #whereabouts
     h2 whereabouts
     ul#whereabouts-list
@@ -38,3 +24,17 @@
         a href="http://www.youtube.com/user/pietraswithin" title="YouTube"
           i.fa.fa-youtube
 hr
+
+section id="projects"
+  h2 Projects
+  ul
+    a href="https://www.youtube.com/watch?v=eV1Srx4BHpg" title="shareless"
+      li
+        div.thumbnail
+          video width="auto" height="100%" autoplay="" muted="" loop="" style="transform: translateX(-35%);"
+            source src='/images/shareless.mp4'
+            source src='/images/shareless.webm' type='video/webm;codecs="vp8, vorbis"'
+        h3 
+          span shareless
+        p A file sharing without storage service. An early experiment in Node.js' sockets and event loop.
+  
