--- a/views/layout.slim
+++ b/views/layout.slim
@@ -5,6 +5,7 @@ html
       | Progress
     meta http-equiv="content-type" content="text/html; charset=UTF8"
     link rel="shortcut icon" href="/favicon.ico"
+    link href="https://fonts.googleapis.com/css?family=Lato:300,300italic,400" rel="stylesheet" type="text/css"
     link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
         /! inject:vendor:css
         /! endinject
