--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -45,6 +45,10 @@ header {
   background-color: @header-color;
   color: #fff;
 
+  h1 {
+    letter-spacing: -4px;
+  }
+
   p#tagline {
     font-style: italic;
   	text-align: justify;
