--- a/views/layout.slim
+++ b/views/layout.slim
@@ -2,8 +2,9 @@ doctype html
 html
   head
     title
-      | Progress
+      | Piotr Sokólski
     meta http-equiv="content-type" content="text/html; charset=UTF8"
+    meta name="description" content="Piotr Sokólski, a programmer living in Warsaw, Poland"
     link rel="shortcut icon" href="/images/favicon.png"
     link href="https://fonts.googleapis.com/css?family=Lato:300,300italic,400" rel="stylesheet" type="text/css"
     link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
