--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -130,11 +130,11 @@ section#projects {
   padding-left: 3em;
   box-shadow: inset 0 1px 0 0 rgba(0,0,0,.05),inset 0 2px 3px 0 rgba(0,0,0,.1);
   min-height: 100px;
-  width: 100%;
   background-color: @projects-color;
   padding-top: 20px;
   color: #555;
   padding-bottom: 10px;
+  overflow: auto;
 
   h2 {
     font-size: 24pt;
@@ -143,14 +143,19 @@ section#projects {
   ul {
     margin-left: 1em;
     margin-top: 1em;
+    max-width: 820px;
+
     li {
-      font-size: 12pt;
+      font-size: 11pt;
       display: block;
       width: 400px;
       background-color: white;
       border-radius: 10px;
       overflow: auto;
       box-shadow: 0 1px 0 0 rgba(0,0,0,.05), 0 2px 3px 0 rgba(0,0,0,.1);
+      float: left;
+      margin-right: 10px;
+      margin-bottom: 10px;
 
       .thumbnail {
         width: 100px;
@@ -160,6 +165,7 @@ section#projects {
         border-top-left-radius: 10px;
         border-bottom-left-radius: 10px;
         margin-right: 12px;
+        background-size: cover;
       }
 
       h3 {
@@ -171,6 +177,16 @@ section#projects {
         }
       }
     }
+
+    .shareless .thumbnail {
+      background-image: url('/images/shareless.png');
+      background-position-x: 60%;
+
+      video {
+        transform: translateX(-35%);
+      }
+    }
+
   }
 
 }
