--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -176,6 +176,11 @@ section#projects {
           .underlined();
         }
       }
+
+      p {
+        padding-right: 8px;
+        text-align: justify;
+      }
     }
 
     .shareless .thumbnail {
@@ -185,6 +190,10 @@ section#projects {
       video {
         transform: translateX(-35%);
       }
+    }
+
+    .robod .thumbnail {
+      background-image: url('/images/dobo.jpg');
     }
 
   }
