--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -31,11 +31,12 @@ a {
   outline: none;
 }
 
-.underlined {
-  background: linear-gradient(#fffff8, #fffff8), linear-gradient(#fffff8, #fffff8), linear-gradient(#555, #555);
+//borrowed from https://github.com/edwardtufte/tufte-css
+.underlined(@color, @bgcolor) {
+  background: linear-gradient(@bgcolor, @bgcolor), linear-gradient(@bgcolor, @bgcolor), linear-gradient(@color, @color);
   background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
   background-repeat: no-repeat, no-repeat, repeat-x;
-  text-shadow: 0.03em 0 #fffff8, -0.03em 0 #fffff8, 0 0.03em #fffff8, 0 -0.03em #fffff8, 0.06em 0 #fffff8, -0.06em 0 #fffff8, 0.09em 0 #fffff8, -0.09em 0 #fffff8, 0.12em 0 #fffff8, -0.12em 0 #fffff8, 0.15em 0 #fffff8, -0.15em 0 #fffff8;
+  text-shadow: 0.03em 0 @bgcolor, -0.03em 0 @bgcolor, 0 0.03em @bgcolor, 0 -0.03em @bgcolor, 0.06em 0 @bgcolor, -0.06em 0 @bgcolor, 0.09em 0 @bgcolor, -0.09em 0 @bgcolor, 0.12em 0 @bgcolor, -0.12em 0 @bgcolor, 0.15em 0 @bgcolor, -0.15em 0 @bgcolor;
   background-position: 0% 93%, 100% 93%, 0% 93%;
 }
 
@@ -83,6 +84,7 @@ header {
         	position: absolute;
         	left: 50px;
         	top: -5px;
+          .underlined(#fff, @header-color);
         }
 
         img {
@@ -173,7 +175,7 @@ section#projects {
         margin-top: 5px;
         margin-bottom: 5px;
         span {
-          .underlined();
+          .underlined(#555, @projects-color);
         }
       }
 
