--- a/views/_index.slim
+++ b/views/_index.slim
@@ -33,7 +33,7 @@ section id="projects"
         li
           div.thumbnail
             - if proj.has_key? 'videos'
-              video width="auto" height="100%" autoplay=true muted=true loop=true
+              video width="auto" height="100%" autoplay=true muted=true loop=true poster=proj['poster']
                 - for video in proj['videos']
                   source src=video['src']
           h3: span = proj['name']
