background color for higher pages

--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -6,13 +6,15 @@
 
 html, body {
   width: 100%;
-  background: linear-gradient(to top, @header-color 50%, @bottom-color 50%);
+  height: 100%;
+  background-color: @bottom-color;
 }
 
 body {
   font-family:'lato','helvetica neue',helvetica,sans-serif;
   font-weight:300;
   font-size: 16pt;
+  background: linear-gradient(to bottom, @header-color 50%, @bottom-color 50%);
 }
 
 h1 {
