--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -223,6 +223,10 @@ section#projects {
       }
     }
 
+    .relaks .thumbnail {
+      background-image: url('/images/relax.jpg');
+    }
+
   }
 
 }
