--- a/views/_index.slim
+++ b/views/_index.slim
@@ -1,6 +1,6 @@
 header
   h1 Piotr Sokólski
-  p#tagline  Hi, my name is Piotr Sokólski and I'm a programmer living in Warsaw, Poland. 
+  p#tagline  Hi, my name is Piotr and I'm a programmer living in Warsaw, Poland. 
   ul#navigation
     li#mail
       a href="/PiotrSokolski.vcf" title="vCard"
