--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -22,7 +22,7 @@ h1 {
 	font-size: 66pt;
 }
 
-h2{
+h2 {
 	font-weight: 300;
 	font-size: 16pt
 }
@@ -42,191 +42,5 @@ a {
   background-position: 0% 93%, 100% 93%, 0% 93%;
 }
 
-header {
-  padding-left: 3em;
-  padding-top: 50px;
-  background-color: @header-color;
-  color: #fff;
-
-  h1 {
-    letter-spacing: -4px;
-  }
-
-  p#tagline {
-    font-style: italic;
-  	text-align: justify;
-  	display: block;
-  	width: 25em;
-  	margin-top: 10px;
-  }
-
-  .vcard{
-  	width: 34px;
-  	height: 26px;
-
-  	background-position: 0px 0px;
-  }
-
-  ul#navigation {
-  	margin-top: 30px;
-  	font-size: 26pt;
-
-    li#mail {
-    	margin-top: .8em;
-    	position: relative;
-    	height: 1.5em;
-
-      a {
-        &:first-child {
-        	position: absolute;
-        }
-
-        &:last-child {
-        	display: block;
-        	position: absolute;
-        	left: 50px;
-        	top: -5px;
-          .underlined(#fff, @header-color);
-        }
-
-        img {
-          filter: invert(1);
-        }
-      }
-    }
-
-  }
-
-  #whereabouts {
-  	height: 4em;
-  }
-
-  #whereabouts-list {
-  	margin-top: 15px;
-
-    li {
-    	display: block;
-    	float: left;
-    	margin-right: 1em;
-    	height: 27px;
-
-      a {
-        &, &:hover, &:visited {
-          color: white;
-        }
-      }
-
-    }
-  }
-
-}
-
-hr {
-	width: 100%;
-	border: none;
-	border-bottom: 1px solid #fff;
-	margin-top: -3em;
-	float: left;
-	height: 2px;
-}
-
-section#projects {
-  padding-left: 3em;
-  box-shadow: inset 0 1px 0 0 rgba(0,0,0,.05),inset 0 2px 3px 0 rgba(0,0,0,.1);
-  min-height: 100px;
-  background-color: @projects-color;
-  padding-top: 20px;
-  color: #555;
-  padding-bottom: 10px;
-  overflow: auto;
-
-  video {
-    display: none;
-  }
-
-  &:hover video {
-    display: block;
-  }
-
-  h2 {
-    font-size: 24pt;
-  }
-
-  ul {
-    margin-left: 1em;
-    margin-top: 1em;
-    max-width: 820px;
-
-    li {
-      font-size: 11pt;
-      display: block;
-      width: 400px;
-      background-color: white;
-      border-radius: 10px;
-      overflow: auto;
-      box-shadow: 0 1px 0 0 rgba(0,0,0,.05), 0 2px 3px 0 rgba(0,0,0,.1);
-      float: left;
-      margin-right: 10px;
-      margin-bottom: 10px;
-
-      .thumbnail {
-        width: 100px;
-        height: 100px;
-        overflow: hidden;
-        float: left;
-        border-top-left-radius: 10px;
-        border-bottom-left-radius: 10px;
-        margin-right: 12px;
-        background-size: cover;
-        mask-image: radial-gradient(circle, white 100%, black 100%);
-      }
-
-      h3 {
-        font-weight: 400;
-        margin-top: 5px;
-        margin-bottom: 5px;
-        span {
-          .underlined(#555, @projects-color);
-        }
-      }
-
-      p {
-        padding-right: 8px;
-        text-align: justify;
-      }
-    }
-
-    .shareless {
-      .thumbnail, video {
-        background-image: url('/images/shareless.png');
-        background-position-x: 60%;
-      }
-      video {
-        transform: translateX(-35%);
-      }
-    }
-
-    .robod .thumbnail {
-      background-image: url('/images/dobo.jpg');
-    }
-
-    .progress .thumbnail {
-      background-image: url('/images/progress.png');
-    }
-
-    .readabit .thumbnail {
-      background-image: url('/images/readabit.png');
-      background-position-x: -6px;
-
-      video {
-        transform: translateX(-6px);
-      }
-    }
-
-    .relaks .thumbnail {
-      background-image: url('/images/relax.jpg');
-    }
-
-  }
-
-}
+@import "_header";
+@import "_projects";
