--- a/assets/styles/_projects.less
+++ b/assets/styles/_projects.less
@@ -1,5 +1,10 @@
 section#projects {
-  padding-left: 3em;
+  @media screen and (min-width: 500px) {
+    padding-left: 3em;
+  }
+  @media screen and (max-width: 500px) {
+    padding-left: 10px;
+  }
   box-shadow: inset 0 1px 0 0 rgba(0,0,0,.05),inset 0 2px 3px 0 rgba(0,0,0,.1);
   min-height: 100px;
   background-color: @projects-color;
@@ -21,21 +26,40 @@ section#projects {
   }
 
   ul {
-    margin-left: 1em;
+    @media screen and (min-width: 500px) {
+      margin-left: 1em;
+    }
     margin-top: 1em;
-    max-width: 820px;
+
+    a {
+      display: inline-block;
+      transition: transform 200ms;
+      -webkit-transform: translate3d(0, 0, 0); //safari has some issues...
+    }
+
+    a[href]:hover {
+      transform: scale(1.05);
+    }
 
     li {
       font-size: 11pt;
+      @media only screen
+        and (max-device-width: 667px)
+        and (-webkit-min-device-pixel-ratio: 2)
+        and (orientation: portrait) {
+          font-size: 9pt;
+        }
+
       display: block;
       width: 400px;
       background-color: white;
       border-radius: 10px;
-      overflow: auto;
       box-shadow: 0 1px 0 0 rgba(0,0,0,.05), 0 2px 3px 0 rgba(0,0,0,.1);
       float: left;
-      margin-right: 10px;
-      margin-bottom: 10px;
+      margin-right: 15px;
+      margin-bottom: 15px;
+      height: 100px;
+      overflow: hidden;
 
       .thumbnail {
         width: 100px;
@@ -51,8 +75,8 @@ section#projects {
 
       h3 {
         font-weight: 400;
-        margin-top: 5px;
-        margin-bottom: 5px;
+        margin-top: 3px;
+        margin-bottom: 3px;
         span {
           .underlined(#555, @projects-color);
         }
@@ -61,6 +85,7 @@ section#projects {
       p {
         padding-right: 8px;
         text-align: justify;
+        line-height: 12pt;
       }
     }
 
@@ -95,6 +120,26 @@ section#projects {
       background-image: url('/images/relax.jpg');
     }
 
+    .flatloc .thumbnail {
+      background-image: url('/images/flatloc.png');
+    }
   }
 
+  @media screen and (min-width: 920px) {
+    ul {
+      width: 840px;
+    }
+  }
+
+  @media screen and (max-width: 500px) {
+    ul {
+      width: 100%;
+      li {
+        width: calc(100% - 10px);
+        margin: auto;
+        margin-bottom: 15px;
+        float: none;
+      }
+    }
+  }
 }
