--- a/views/layout.slim
+++ b/views/layout.slim
@@ -5,6 +5,7 @@ html
       | Piotr Sokólski
     meta http-equiv="content-type" content="text/html; charset=UTF8"
     meta name="description" content="Piotr Sokólski, a programmer living in Warsaw, Poland"
+    meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0"
     link rel="shortcut icon" href="/images/favicon.png"
     link href="https://fonts.googleapis.com/css?family=Lato:300,300italic,400" rel="stylesheet" type="text/css"
     link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
