--- a/assets/styles/style.less
+++ b/assets/styles/style.less
@@ -3,6 +3,8 @@
 @header-color: #00adef;
 @projects-color: #f8f8f8;
 @bottom-color: @projects-color;
+//more colors: #3A4750, #FBFFA3, #FF4B68
+//colorhunt.co
 
 html, body {
   width: 100%;
