--- a/views/layout.slim
+++ b/views/layout.slim
@@ -4,7 +4,7 @@ html
     title
       | Piotr Sokólski
     meta http-equiv="content-type" content="text/html; charset=UTF8"
-    meta name="description" content="Piotr Sokólski, a programmer living in Warsaw, Poland"
+    meta name="description" content=_index["info"]["description"]
     meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0"
     link rel="shortcut icon" href="/images/favicon.png"
     link href="https://fonts.googleapis.com/css?family=Lato:300,300italic,400" rel="stylesheet" type="text/css"
@@ -14,8 +14,9 @@ html
         /! inject:css
         /! endinject
   body
+    == File.read("views/_gtm.html")
     == Slim::Template.new('views/_index.slim').render(Object.new, _index)
-    
+
     /! inject:vendor:js
     /! endinject
     /! inject:js
