Relaks article (wip)

--- a/views/_index.slim
+++ b/views/_index.slim
@@ -1,6 +1,6 @@
 header
   h1 Piotr Sokólski
-  p#tagline = info['description']
+  p#tagline = head['description']
   ul#navigation
     li#mail
       a href="/PiotrSokolski.vcf" title="vCard"
