--- a/views/_layout.slim
+++ b/views/_layout.slim
@@ -1,21 +1,29 @@
 doctype html
-html
+html.article
   head
-    title
-      | Piotr Sokólski
+    title=article["title"]
     meta http-equiv="content-type" content="text/html; charset=UTF8"
-    meta name="description" content=_index["info"]["description"]
+    meta name="description" content=head["description"]
     meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0"
     link rel="shortcut icon" href="/images/favicon.png"
-    link href="https://fonts.googleapis.com/css?family=Lato:300,300italic,400" rel="stylesheet" type="text/css"
     link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
         /! inject:vendor:css
         /! endinject
         /! inject:css
         /! endinject
-  body
+  body.article
     == File.read("views/_gtm.html")
-    == Slim::Template.new('views/_index.slim').render(Object.new, _index)
+    header
+      .title
+        h1==article["title"]
+        .byline
+          .item Piotr Sokólski
+          .item=article["date"]
+          .item=article["tags"]
+    .main
+      article
+        == yield
+
 
     /! inject:vendor:js
     /! endinject
