--- a/views/_index.slim
+++ b/views/_index.slim
@@ -14,8 +14,8 @@ header
           i.fa.fa-github
       li.separator
       li
-        a href="http://twitter.com/pyetras" title="Twitter"
-          i.fa.fa-twitter
+        a href="https://www.linkedin.com/in/piotr-sokolski/" title="Linkedin"
+          i.fa.fa-linkedin
       li.separator
       li
         a href="http://www.facebook.com/pyetras" title="Facebook"
