--- a/views/smartest-rc-car.slim
+++ b/views/smartest-rc-car.slim
@@ -16,16 +16,14 @@
     The best we can hope for right now is a simulator.
     I believe that making an approximation of the technology available to anyone who wishes to try it is possible, just as it was possible with VR and Google Cardboard.
 
-  p
-    figure class="fullwidth"
-      img src="/images/kart1.jpg" alt="Prototype 2"
+    ![](/images/kart1.jpg)
 
   markdown:
     The platform I'm proposing is not unlike the Cardboard.
     The principles remain the same: low cost (or made of things you likely already own) and no need for expert knowledge to get started.
     I've been working on a toy car based on a smartphone that is able to reuse the sensors (GPS, compass, accelerometer, light), connectivity and high-res camera available on all modern devices.
 
-    ![Prototype 2](/images/kart2.jpg)
+    ![Prototype 2](/images/kart2.jpg)\
 
     And it takes your phone for a ride!
 
@@ -47,12 +45,12 @@
     While the first prototype was a proof of concept of the communication model, the
     second has the shape of what I originally had in mind.
 
-    ![Prototype 2](/images/kart3.jpg)
+    ![Prototype 2](/images/kart3.jpg)\
 
     This time the phone itself becomes a part of car's chassis.
     A periscope (which [originally](https://www.kickstarter.com/projects/1317724211/covr-photo-an-iphone-case-with-a-built-in-prism-le) is a [pretty creepy](https://techcrunch.com/2016/04/28/covr-photo/) iPhone camera case) allows the phone's camera to face forward.
 
-    ![Autodesk Fusion360 Project](/images/kart-project.jpg)
+    ![Autodesk Fusion360 Project](/images/kart-project.jpg)\
 
     I've reused some parts from the buggy kit and 3D-printed outer parts of the chassis to allow for mounting the extra elements on top of it.
     Interestingly, I've found that a laser cutter is way more roubst and reliable tool for rapid prototyping than a 3D printer (as long as you can live with the limitations).
@@ -75,5 +73,5 @@
     With communication to a computer re-established (this time there's no avoiding native apps) I plan to work on employing phone's camera and sensors to implement an odometer.
     After all, a phone that can find it's way back home is an appliance many would appreciate.
 
-    ![Prototype 2](/images/kart4.jpg)
+    ![Prototype 2](/images/kart4.jpg)\
 
