add article author

--- a/assets/styles/_article.less
+++ b/assets/styles/_article.less
@@ -62,6 +62,15 @@ html.article {
       }
 
     }
+    
+    .subtitle {
+      font-style: italic;
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+      font-size: 1.8rem;
+      display: block;
+      line-height: 1;
+    }
 
   }
 
