--- a/views/_layout.slim
+++ b/views/_layout.slim
@@ -15,6 +15,8 @@ html.article
     == File.read("views/_gtm.html")
     header
       .title
+        p.subtitle
+          a href="/" Piotr Sokólski
         h1==article["title"]
         / .byline
         /   .item Piotr Sokólski
