--- a/views/_layout.slim
+++ b/views/_layout.slim
@@ -14,14 +14,19 @@ html.article
   body.article
     == File.read("views/_gtm.html")
     header
-      .title
+      / .icons
+      /   a href="/" title="pyetras.com"
+      /     span.fa-stack
+      /       i.fa.fa-circle.fa-stack-2x
+      /       i.fa.fa-home.fa-inverse.fa-stack-1x
+      /   a href="https://github.com/pyetras" title="GitHub"
+      /     span.fa-stack
+      /       i.fa.fa-circle.fa-stack-2x
+      /       i.fa.fa-github.fa-inverse.fa-stack-1x
+      .title-container
         p.subtitle
           a href="/" Piotr Sokólski
         h1==article["title"]
-        / .byline
-        /   .item Piotr Sokólski
-        /   .item=article["date"]
-        /   .item=article["tags"]
     .main
       .article-container
           article
