--- a/assets/styles/_article.less
+++ b/assets/styles/_article.less
@@ -12,57 +12,43 @@ html.article {
   header {
     font-family: HoeflerText-Regular, Cochin, Georgia, serif;
     width: 100%;
-    height: 400px - 15px;
-    position: relative;
+    min-height: 400px - 15px;
     padding-bottom: 15px;
     color: #fff;
     background-color: @header-color;
-  }
-
-  .title {
-    position: absolute;
-    bottom: 0;
-    width: 87.5%;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 12.5%;
-    max-width: 1400px;
-
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    
+    .title-container {
+      width: 45rem;
+    }
+    
+    .icons {
+      width: 45rem;
+      text-align: right;
+      
+      a {
+        color: rgba(255,255,255,.9)
+      }
+      
+      .fa-inverse {
+        color: @header-color;
+      }
+      
+      a:hover {
+        color: #fff;
+      }
+    }
+    
     h1 {
       font-size: 56px;
       margin-bottom: 48px;
       letter-spacing: -1px;
       line-height: 1.3em;
     }
-
-    .byline {
-      font: 400 16px/1.55em -apple-system, BlinkMacSystemFont, "Roboto", Helvetica, sans-serif;
-      font-size: 12px;
-      border-top: 1px solid rgba(255, 255, 255, 0.3);
-      color: rgba(255, 255, 255, 0.9);
-      margin: auto;
-      box-sizing: border-box;
-      padding-top: 12px;
-      width: 87.5%;
-      margin-bottom: 40px;
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-
-      .item {
-        text-align: left;
-        margin-right: 8px;
-        padding-left: 20px;
-        width: 68px;
-        border-left: 1px solid rgba(255, 255, 255, 0.2);
-      }
-
-      .item:first-child {
-        border-left: none;
-      }
-
-    }
-    
+      
     .subtitle {
       font-style: italic;
       margin-top: 1rem;
@@ -71,7 +57,6 @@ html.article {
       display: block;
       line-height: 1;
     }
-
   }
 
   div.main {
@@ -80,11 +65,9 @@ html.article {
   }
 
   .article-container {
-    width: 87.5%;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 12.5%;
-    max-width: 1400px;
+    max-width: 45rem;
   }
 
   article {
@@ -117,12 +100,11 @@ html.article {
     }
 
     p {
-      line-height: 2rem;
+      line-height: 2.2rem;
       margin-top: 1.4rem;
       margin-bottom: 1.4rem;
       padding-right: 0;
       vertical-align: baseline;
-      text-align: justify;
     }
 
     h2 {
@@ -161,12 +143,12 @@ html.article {
     }
 
     blockquote p {
-      width: 55%;
+      width: 100%;
       margin-right: 40px;
     }
 
     blockquote footer {
-      width: 55%;
+      width: 100%;
       font-size: 1.1rem;
       text-align: right;
     }
@@ -187,7 +169,7 @@ html.article {
       font-size: 100%;
       font: inherit;
       vertical-align: baseline;
-      max-width: 55%;
+      max-width: 100%;
       -webkit-margin-start: 0;
       -webkit-margin-end: 0;
       margin: 0 0 3em 0;
@@ -220,57 +202,6 @@ html.article {
     pre, code {
       margin-bottom: 24px;
     }
-
-    .sidenote, .marginnote {
-      float: right;
-      clear: right;
-      margin-right: -60%;
-      width: 50%;
-      margin-top: 0;
-      margin-bottom: 0;
-      font-size: 1.1rem;
-      line-height: 1.3;
-      vertical-align: baseline;
-      position: relative;
-    }
-
-    .sidenote-number {
-      counter-increment: sidenote-counter;
-    }
-
-    .sidenote-number:after, .sidenote:before {
-      content: counter(sidenote-counter) " ";
-      font-family: et-book-roman-old-style;
-      position: relative;
-      vertical-align: baseline;
-    }
-
-    .sidenote-number:after {
-      content: counter(sidenote-counter);
-      font-size: 1rem;
-      top: -0.5rem;
-      left: 0.1rem;
-    }
-
-    .sidenote:before {
-      content: counter(sidenote-counter) " ";
-      top: -0.5rem;
-    }
-
-    blockquote .sidenote, blockquote .marginnote {
-      margin-right: -82%;
-      min-width: 59%;
-      text-align: left;
-    }
-
-  }
-
-  p, footer, table {
-    width: 55%;
-  }
-
-  div.fullwidth, table.fullwidth {
-    width: 100%;
   }
 
   div.table-wrapper {
@@ -313,7 +244,7 @@ html.article {
   }
 
   .fullwidth, article .figure {
-    max-width: 90%;
+    max-width: 100%;
     clear: both;
   }
 
@@ -351,15 +282,15 @@ html.article {
 
 }
 
-@media (max-width:1024px) {
+@media (max-width:960px) {
   .article body {
     .article-container {
-      width: 84%;
+      max-width: 84%;
       padding-left: 8%;
       padding-right: 8%;
     }
 
-    .title {
+    header .title-container, header .icons {
       width: 84%;
       padding-left: 8%;
       padding-right: 8%;
@@ -382,14 +313,6 @@ html.article {
         width: 90%;
       }
 
-      figure, .figure {
-        max-width: 100%;
-      }
-
-      figure.fullwidth, .figure {
-        max-width: 100%;
-      }
-
       figcaption, figure.fullwidth figcaption, .figure .caption {
         margin-right: 0%;
         max-width: none;
@@ -400,35 +323,12 @@ html.article {
         margin-right: 0em;
       }
 
-      blockquote p, blockquote footer {
-        width: 100%;
-      }
-
-      label.margin-toggle:not(.sidenote-number) {
-        display: inline;
-      }
-
-      .sidenote, .marginnote {
-        display: block;
-        float: left;
-        left: 1rem;
-        clear: both;
-        width: 95%;
-        margin: 1rem 2.5%;
-        vertical-align: baseline;
-        position: relative;
-      }
-
       label {
         cursor: pointer;
       }
 
       div.table-wrapper, table {
         width: 85%;
-      }
-
-      img {
-        width: 100%;
       }
 
     }
