--- a/assets/styles/_article.less
+++ b/assets/styles/_article.less
@@ -22,10 +22,10 @@ html.article {
     align-items: center;
 
     .homepage {
-      width: 92%;
+      width: 45rem;
       font-size: 1rem;
-      margin-left: 8%;
       margin-top: 12px;
+      margin-bottom: 1rem;
 
       a {
         .underlined(#fff, @header-color);
@@ -301,7 +301,7 @@ html.article {
       padding-right: 8%;
     }
 
-    header .title-container, header .icons {
+    header .title-container, header .homepage {
       width: 84%;
       padding-left: 8%;
       padding-right: 8%;
